# POLDAM

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  POLDAM  README.md  README_en.md  boost_tmp.cpp  build.bash  docker-compose.yml  main  main.cpp  poldam_sample.sh  test  test_util
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: doxygen-CI.yml
Data/Main_LOG/: LOG$ObjectTypes00001.txt  LOG$String00001.txt  LOG$Types.txt  classes.txt  dataids.txt  log-00001.slg  log.txt  main_log.txt  methods.txt  weaving.properties
Graph/: graphConstructor.h
Graph/src/: graph.cpp  graph.h  graph.hpp  graphDiff.cpp  graph_diff.cpp
Interpreter/: Makefile  main.cpp  main.out  test
Interpreter/include/Interpreter/: ILogInterpreter.h  InterpreterCommon.h  LogEventType.h  LogEventType.h.gch  methodEntry.cpp  methodEntry.h  methodEntry.h.gch  methodNormalExit.cpp  methodNormalExit.h  methodParam.cpp  methodParam.h
Interpreter/src/: InterpreterCommon.h  eventHandler.cpp  eventHandler.h  event_handler.cpp  event_handler.h  main.cpp  methodEntry.cpp  methodEntry.h  methodNormalExit.cpp  methodNormalExit.h  methodParam.cpp  methodParam.h
Interpreter/test/: main.cpp
MetaFileParser/include/: dataids.cpp  dataids.h  factory.cpp  factory.h  metafileHandlerCommon.h  seloggerLog.h
MetaFileParser/src/: classes.cpp  classes.h  dataids.cpp  dataids.h  factory.h  main.cpp  metafileHandlerCommon.h  metafile_handler_common.h  methods.cpp  methods.h  objectFile.cpp  objectFile.h  object_file.cpp  object_file.h  seloggerLog.cpp  seloggerLog.h  selogger_log.cpp  selogger_log.h
MetaFileParser/test/: main.cpp
Parser/include/: EventType.h  Parser.h
Parser/include/Interpreter/: ILogInterpreter.h  LogEventType.h
Parser/include/Parser/: Parser.h
Util/include/src/: cmd.cpp  poldamConfig.h  poldamUtil.cpp  poldam_config.h  poldam_config.hpp  poldam_util.cpp  poldam_util.h
dockerfiles/c++/: Dockerfile
dockerfiles/java8/: Dockerfile
docs/html/: ANewInstruction_8java.html  ANewInstruction_8java_source.html  AbstractEventLogger_8java.html  AbstractEventLogger_8java_source.html  ArrayReadWriteMain_8java.html  ArrayReadWriteMain_8java_source.html  BinaryStreamLogger_8java.html  BinaryStreamLogger_8java_source.html  CallStackSet_8java.html  CallStackSet_8java_source.html  CallStack_8java.html  CallStack_8java_source.html  ClassInfo_8java.html  ClassInfo_8java_source.html  ClassLoaderMain_8java.html  ClassLoaderMain_8java_source.html  ClassTransformer_8java.html  ClassTransformer_8java_source.html  ConstructorMain_8java.html  ConstructorMain_8java_source.html  DataFormat_8md.html  DataIdMap_8java.html  DataIdMap_8java_source.html  DataInfoPatternTest_8java.html  DataInfoPatternTest_8java_source.html  DataInfoPattern_8java.html  DataInfoPattern_8java_source.html  DataInfoTest_8java.html  DataInfoTest_8java_source.html  DataInfo_8java.html  DataInfo_8java_source.html  Data_2java8_2selogger_2README_8md.html  Descriptor_8java.html  Descriptor_8java_source.html  DiscardLogger_8java.html  DiscardLogger_8java_source.html  DivideClass_8java.html  DivideClass_8java_source.html  EventFrequencyLogger_8java.html  EventFrequencyLogger_8java_source.html  (+1129 more)
latest_papers/: SupplementaryMaterials.md  SupplementaryMaterials_en.md
poldam/graph/: graph.cpp  graph.hpp  graph_diff.cpp
poldam/helper/: graph_builder.cpp  graph_builder.hpp  poldamGraph_writer.hpp
poldam/script/: example.cpp  test.cpp
poldam/selogger_log_parser/: classes.cpp  classes.hpp  common.hpp  dataids.cpp  dataids.hpp  event_type.cpp  event_type.hpp  factory.cpp  factory.hpp  log.cpp  log.hpp  methods.cpp  methods.hpp  object.cpp  object.hpp
poldam/util/: arg_config.cpp  arg_config.hpp  utility.hpp
(+232 files in other folders)
